[package]
name = "radix-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "sorting_benchmark"
harness = false

[profile.release]
lto = true
opt-level = 3
debug = false
overflow-checks = false